--- a/src/app/features/home/components/hero/hero.component.html
+++ b/src/app/features/home/components/hero/hero.component.html
@@ -1,16 +1,16 @@
 <section
-  class="text-stone-600 dark:text-stone-400 body-font transition-all min-h-full flex flex-col items-center justify-start md:justify-center"
+  class="text-stone-600 dark:text-stone-400 body-font transition-all min-h-dvh sm:min-h-full flex flex-col items-center justify-start md:justify-center mx-auto max-w-screen-md"
 >
   <div
     class="container mx-auto flex px-5 py-24 items-center justify-center flex-col sm:flex-row gap-4 sm:gap-8 md:gap-16"
   >
     <div
-      class="w-4/6 sm:w-3/6 md:w-2/6 flex justify-center items-center min-h-48 transition-all duration-200"
+      class="w-60 h-60 sm:w-72 sm:h-72 flex justify-center items-center min-h-48 transition-all duration-200 rounded-full"
     >
       <img
-        class="w-full h-full object-cover object-center transition-all duration-200 shadow-xl rounded-full"
+        class="w-full h-full object-cover object-center transition-all duration-200 shadow-xl rounded-full bg-stone-300 dark:bg-stone-700"
         alt="hero"
-        src="https://avatar.iran.liara.run/public/2"
+        src="profile.png"
       />
     </div>
 
@@ -18,24 +18,16 @@
       <h1
         class="title-font sm:text-4xl text-3xl mb-4 font-medium text-stone-900 dark:text-stone"
       >
-        <span class="dark:text-stone-200">Hi! I'm Reymark Bacalso</span>
+        <span class="dark:text-stone-200 tracking-wide"
+          >Hey! I'm Reymark Bacalso</span
+        >
       </h1>
-      <p class="mb-8 leading-relaxed">
-        You can call me
-        <span
-          class="underline underline-offset-4 decoration-2 decoration-solid decoration-yellow-500 dark:decoration-yellow-400 tracking-wide uppesrcase font-medium"
-        >
-          Marcus</span
-        >
-        , I am a Software Developer specializing in frontend development with 7
-        years of experience. I'm passionate about crafting user-friendly and
-        performant web applications. I started my tech career role as a back-end
-        developer,where I honed my problem-solving skills, which I now leverage
-        to continuously improve the user experience through front-end
-        development.
+      <p class="mb-8 leading-relaxed dark:text-stone-300">
+        Software Developer
+        <span class="border-l-2 border-l-stone-400 ml-2 pl-2">Frontend</span>
       </p>
       <div
-        class="flex flex-col lg:flex-row justify-center md:justify-start gap-2 sm:gap-4 px-4 sm:px-0 w-full"
+        class="flex flex-col lg:flex-row justify-center md:justify-start gap-2 sm:gap-4 w-full"
       >
         <button
           class="w-full sm:w-auto text-center text-stone-100 bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded text-lg line-clamp-1 flex items-center justify-center gap-4"
@@ -59,7 +51,7 @@
           Download CV
         </button>
         <button
-          class="w-full sm:w-auto text-center text-stone-700 bg-stone-100 py-2 px-6 focus:outline-none hover:bg-stone-200 rounded text-l flex items-center justify-center gap-4 border-[1px] border-stone-600 dark:border-stone-600"
+          class="hidden w-full sm:w-auto text-center text-stone-700 bg-stone-100 py-2 px-6 focus:outline-none hover:bg-stone-200 rounded text-l flex items-center justify-center gap-4 border-[1px] border-stone-600 dark:border-stone-600"
         >
           <span class="text-base">
             <svg
