--- a/src/app/features/home/components/skill/skill.component.html
+++ b/src/app/features/home/components/skill/skill.component.html
@@ -1,116 +1,37 @@
-<section class="text-gray-600 body-font">
-  <div class="container px-5 py-24 mx-auto">
-    <div class="flex flex-col">
-      <div class="h-1 bg-gray-200 rounded overflow-hidden">
-        <div class="w-24 h-full bg-indigo-500"></div>
-      </div>
-      <div class="flex flex-wrap sm:flex-row flex-col py-6 mb-12">
-        <h1
-          class="sm:w-2/5 text-gray-900 font-medium title-font text-2xl mb-2 sm:mb-0"
+<div
+  class="text-stone-600 transition-all duration-300 flex flex-col items-center justify-start md:justify-center w-full mx-auto max-w-screen-md"
+>
+  <div
+    class="container mx-auto px-5 sm:py-12 items-center justify-center gap-4 w-full"
+  >
+    <h3 class="font-bold text-2xl mb-6 dark:text-stone-300 tracking-wide">
+      Tools and Frameworks
+    </h3>
+    <div
+      class="w-full flex flex-wrap gap-2 sm:gap-4 justify-start sm:justify-start"
+    >
+      <ng-container *ngFor="let tool of tools">
+        <!-- <div class=""> -->
+        <a
+          class="border-[1px] border-stone-300 dark:border-stone-900 bg-stone-100/70 dark:bg-stone-800/50 h-24 w-24 rounded-md p-4 flex flex-col items-center justify-center cursor-pointer hover:-translate-y-1 transition-all duration-700"
         >
-          Space The Final Frontier
-        </h1>
-        <p class="sm:w-3/5 leading-relaxed text-base sm:pl-10 pl-0">
-          Street art subway tile salvia four dollar toast bitters selfies quinoa
-          yuccie synth meditation iPhone intelligentsia prism tofu. Viral
-          gochujang bitters dreamcatcher.
-        </p>
-      </div>
-    </div>
-    <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4">
-      <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
-        <div class="rounded-lg h-64 overflow-hidden">
           <img
-            alt="content"
-            class="object-cover object-center h-full w-full"
-            src="https://dummyimage.com/1203x503"
+            [src]="tool.imgUrl"
+            alt="{{ tool.label }}"
+            loading="eager"
+            class="h-3/5 w-3/5 sm:h-3/6 sm:w-3/6 object-scale-down"
           />
-        </div>
-        <h2 class="text-xl font-medium title-font text-gray-900 mt-5">
-          Shooting Stars
-        </h2>
-        <p class="text-base leading-relaxed mt-2">
-          Swag shoivdigoitch literally meditation subway tile tumblr
-          cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical
-          XOXO lumbersexual.
-        </p>
-        <a class="text-indigo-500 inline-flex items-center mt-3"
-          >Learn More
-          <svg
-            fill="none"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            class="w-4 h-4 ml-2"
-            viewBox="0 0 24 24"
+          <p
+            for=""
+            class="text-stone-600 dark:text-stone-300 mt-2 text-xs tracking-wide text-center"
+            title="{{ tool.label }}"
           >
-            <path d="M5 12h14M12 5l7 7-7 7"></path>
-          </svg>
+            {{ tool.label }}
+          </p>
+          <!-- {{ tool.title }} -->
         </a>
-      </div>
-      <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
-        <div class="rounded-lg h-64 overflow-hidden">
-          <img
-            alt="content"
-            class="object-cover object-center h-full w-full"
-            src="https://dummyimage.com/1204x504"
-          />
-        </div>
-        <h2 class="text-xl font-medium title-font text-gray-900 mt-5">
-          The Catalyzer
-        </h2>
-        <p class="text-base leading-relaxed mt-2">
-          Swag shoivdigoitch literally meditation subway tile tumblr
-          cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical
-          XOXO lumbersexual.
-        </p>
-        <a class="text-indigo-500 inline-flex items-center mt-3"
-          >Learn More
-          <svg
-            fill="none"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            class="w-4 h-4 ml-2"
-            viewBox="0 0 24 24"
-          >
-            <path d="M5 12h14M12 5l7 7-7 7"></path>
-          </svg>
-        </a>
-      </div>
-      <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
-        <div class="rounded-lg h-64 overflow-hidden">
-          <img
-            alt="content"
-            class="object-cover object-center h-full w-full"
-            src="https://dummyimage.com/1205x505"
-          />
-        </div>
-        <h2 class="text-xl font-medium title-font text-gray-900 mt-5">
-          The 400 Blows
-        </h2>
-        <p class="text-base leading-relaxed mt-2">
-          Swag shoivdigoitch literally meditation subway tile tumblr
-          cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical
-          XOXO lumbersexual.
-        </p>
-        <a class="text-indigo-500 inline-flex items-center mt-3"
-          >Learn More
-          <svg
-            fill="none"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            class="w-4 h-4 ml-2"
-            viewBox="0 0 24 24"
-          >
-            <path d="M5 12h14M12 5l7 7-7 7"></path>
-          </svg>
-        </a>
-      </div>
+        <!-- </div> -->
+      </ng-container>
     </div>
   </div>
-</section>
+</div>
