--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-layout class="dark:bg-gray-900 scroll-smooth">
+<app-layout class="dark:bg-gray-900 scroll-smooth font-sans">
   <router-outlet></router-outlet>
 </app-layout>
