--- a/src/app/core/layout/components/header/header.component.html
+++ b/src/app/core/layout/components/header/header.component.html
@@ -53,11 +53,11 @@
   <div
     class="h-dvh sm:hidden transition-[height, transform, display] duration-300 relative"
     [ngClass]="{
-      ' translate-y-0': layoutService.expandMenu,
+      'translate-y-0 opacity-1': layoutService.expandMenu,
       '-translate-y-full h-0 opacity-0 duration-100': !layoutService.expandMenu
     }"
   >
-    <div class="flex flex-col px-4 py-2 justify-between h-[calc(100vh-3rem)]">
+    <div class="flex flex-col px-4 py-2 justify-between h-[calc(100vh-4rem)]">
       <div>
         <nav>
           <ul class="flex flex-col">
