--- a/src/app/features/home/components/hero/hero.component.html
+++ b/src/app/features/home/components/hero/hero.component.html
@@ -30,7 +30,7 @@
         class="flex flex-col lg:flex-row justify-center md:justify-start gap-2 sm:gap-4 w-full"
       >
         <button
-          class="w-full sm:w-auto text-center text-stone-100 bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded text-lg line-clamp-1 flex items-center justify-center gap-4"
+          class="w-full sm:w-auto text-center text-stone-100 bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded text-base line-clamp-1 flex items-center justify-center gap-4"
         >
           <span>
             <svg
