--- a/src/app/features/home/components/hero/hero.component.html
+++ b/src/app/features/home/components/hero/hero.component.html
@@ -1,5 +1,5 @@
 <section
-  class="text-stone-600 dark:text-stone-400 body-font transition-all min-h-dvh sm:min-h-full flex flex-col items-center justify-start md:justify-center mx-auto max-w-screen-md"
+  class="text-stone-600 dark:text-stone-400 body-font transition-all min-h-dvh md:min-h-[calc(100vh-16rem)] lg:min-h-full flex flex-col items-center justify-start md:justify-center mx-auto max-w-screen-md"
 >
   <div
     class="container mx-auto flex px-5 py-24 items-center justify-center flex-col sm:flex-row gap-4 sm:gap-8 md:gap-16"
@@ -27,10 +27,11 @@
         <span class="border-l-2 border-l-stone-400 ml-2 pl-2">Frontend</span>
       </p>
       <div
-        class="flex flex-col lg:flex-row justify-center md:justify-start gap-2 sm:gap-4 w-full"
+        class="flex flex-col lg:flex-row justify-center md:justify-start items-center sm:items-start gap-2 sm:gap-4 w-full"
       >
         <button
-          class="w-full sm:w-auto text-center text-stone-100 bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded text-base line-clamp-1 flex items-center justify-center gap-4"
+          (click)="downloadCV()"
+          class="w-4/5 sm:w-auto text-center text-stone-100 bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded text-base line-clamp-1 flex items-center justify-center gap-4"
         >
           <span>
             <svg
