--- a/src/app/core/layout/components/header/header.component.html
+++ b/src/app/core/layout/components/header/header.component.html
@@ -14,13 +14,13 @@
       class="hidden sm:ml-auto sm:flex flex-wrap items-center text-base justify-center"
     >
       <a
-        class="mr-5 hover:text-stone-900 dark:hover:text-stone-200 cursor-pointer"
+        class="mr-5 hover:text-stone-900 dark:hover:text-stone-200 cursor-pointer text-lg"
         routerLink="home"
         routerLinkActive="text-stone-900 dark:text-stone-200"
         >Home</a
       >
       <a
-        class="mr-5 hover:text-stone-900 dark:hover:text-stone-200 cursor-pointer"
+        class="mr-5 hover:text-stone-900 dark:hover:text-stone-200 cursor-pointer text-lg"
         routerLink="projects"
         routerLinkActive="text-stone-900 dark:text-stone-200"
         >Projects</a
