Added placeholders for projects page

--- a/src/app/features/projects/projects.component.html
+++ b/src/app/features/projects/projects.component.html
@@ -1,7 +1,22 @@
-<div class="min-h-full mt-16">
+<div class="min-h-full mt-16 w-full">
   <div
-    class="w-full mx-auto max-w-screen-lg text-stone-600 dark:text-stone-300 px-4"
+    class="min-h-[calc(100vh-16rem)] w-full mx-auto max-w-screen-lg text-stone-600 dark:text-stone-300 px-4"
   >
-    test
+    <h2 class="text-xl font-semibold text-stone-600 dark:text-stone-300 mb-8">
+      Projects
+    </h2>
+    <div
+      class="grid xs:grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 w-4/5 sm:w-full pl-8 sm:pl-0"
+    >
+      <div
+        class="h-64 w-full rounded-md border-[1px] border-stone-300 dark:border-stone-900 bg-stone-100/85 dark:bg-stone-800/80 shadow-lg dark:shadown-none"
+      ></div>
+      <div
+        class="h-64 w-full rounded-md border-[1px] border-stone-300 dark:border-stone-900 bg-stone-100/85 dark:bg-stone-800/80 shadow-lg dark:shadown-none"
+      ></div>
+      <div
+        class="h-64 w-full rounded-md border-[1px] border-stone-300 dark:border-stone-900 bg-stone-100/85 dark:bg-stone-800/80 shadow-lg dark:shadown-none"
+      ></div>
+    </div>
   </div>
 </div>
