--- a/src/app/features/home/components/hero/hero.component.html
+++ b/src/app/features/home/components/hero/hero.component.html
@@ -32,25 +32,28 @@
         <a
           href="resume.pdf"
           download="reymarkbacalso_resume.pdf"
-          class="w-4/5 sm:w-auto text-center text-stone-100 bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded text-base line-clamp-1 flex items-center justify-center gap-4 cursor-pointer"
+          class="w-4/5 sm:w-auto text-center text-stone-100 bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded text-base line-clamp-1 flex items-center justify-center gap-2 cursor-pointer"
         >
           <span>
             <svg
+              class="w-5 h-5"
+              aria-hidden="true"
               xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
               fill="none"
               viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="size-6"
             >
               <path
+                stroke="currentColor"
                 stroke-linecap="round"
                 stroke-linejoin="round"
-                d="M9 3.75H6.912a2.25 2.25 0 0 0-2.15 1.588L2.35 13.177a2.25 2.25 0 0 0-.1.661V18a2.25 2.25 0 0 0 2.25 2.25h15A2.25 2.25 0 0 0 21.75 18v-4.162c0-.224-.034-.447-.1-.661L19.24 5.338a2.25 2.25 0 0 0-2.15-1.588H15M2.25 13.5h3.86a2.25 2.25 0 0 1 2.012 1.244l.256.512a2.25 2.25 0 0 0 2.013 1.244h3.218a2.25 2.25 0 0 0 2.013-1.244l.256-.512a2.25 2.25 0 0 1 2.013-1.244h3.859M12 3v8.25m0 0-3-3m3 3 3-3"
+                stroke-width="2"
+                d="M12 13V4M7 14H5a1 1 0 0 0-1 1v4a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-4a1 1 0 0 0-1-1h-2m-1-5-4 5-4-5m9 8h.01"
               />
             </svg>
           </span>
-          Download CV
+          <span>Download CV</span>
         </a>
         <button
           class="hidden w-full sm:w-auto text-center text-stone-700 bg-stone-100 py-2 px-6 focus:outline-none hover:bg-stone-200 rounded text-l flex items-center justify-center gap-4 border-[1px] border-stone-600 dark:border-stone-600"
