Update styling for projects section

--- a/src/app/features/projects/projects.component.html
+++ b/src/app/features/projects/projects.component.html
@@ -6,7 +6,7 @@
       Projects
     </h2>
     <div
-      class="grid xs:grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 w-4/5 sm:w-full pl-8 sm:pl-0"
+      class="grid xs:grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 w-full sm:w-full p-4 sm:pl-0"
     >
       <ng-container *ngFor="let project of projects">
         <div
