--- a/src/app/features/projects/projects.component.html
+++ b/src/app/features/projects/projects.component.html
@@ -2,7 +2,7 @@
   <div
     class="min-h-[calc(100vh-16rem)] w-full mx-auto max-w-screen-lg text-stone-600 dark:text-stone-300 px-4"
   >
-    <h2 class="text-xl font-semibold text-stone-600 dark:text-stone-300 mb-8">
+    <h2 class="text-xl font-semibold text-stone-600 dark:text-stone-300 mb-4">
       Projects
     </h2>
     <div
@@ -10,7 +10,7 @@
     >
       <ng-container *ngFor="let project of projects">
         <div
-          class="h-64 w-full rounded-md border-[1px] border-stone-300 dark:border-stone-900 bg-stone-100/95 dark:bg-stone-800/80 shadow-lg dark:shadown-none relative transition-all duration-500"
+          class="h-64 w-full rounded-md border-[1px] border-stone-400 dark:border-stone-900 bg-stone-100/95 dark:bg-stone-800/80 shadow-lg dark:shadown-none relative hover:shadow-2xl dark:hover:bg-stone-800 transition-all duration-500"
         >
           <img
             [src]="project.snapshot"
@@ -18,30 +18,72 @@
             class="absolute z-0 w-full h-full object-cover opacity-50 hidden rounded-md"
           />
           <div
-            class="w-full h-full p-4 px-6 flex flex-col justify-between text-stone-600 dark:text-stone-300 z-10 text-base"
+            class="w-full h-full p-4 px-6 flex flex-col text-stone-600 dark:text-stone-300 z-10 text-base"
           >
             <div>
-              <h6 class="text-base tracking-wider font-semibold uppercase">
-                {{ project.title }}
-              </h6>
-              <a
-                [href]="project.url"
-                target="_blank"
-                class="text-yellow-500 dark:hov underline underline-offset-4 text-sm"
-                >{{ project.url }}</a
-              >
+              <div class="flex flex-wrap justify-between gap-2">
+                <h6 class="text-base tracking-wider font-semibold uppercase">
+                  {{ project.title }}
+                </h6>
+                <div class="inline-flex gap-1 items-center">
+                  <a
+                    [href]="project.url"
+                    target="_blank"
+                    class="text-stone-500 hover:text-stone-600 dark:text-yellow-600 dark:hover:text-yellow-500 underline underline-offset-4 text-sm h-5 w-5 hover:scale-110 transition-transform"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke-width="1.5"
+                      stroke="currentColor"
+                      class="w-full h-full"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        d="M12 21a9.004 9.004 0 0 0 8.716-6.747M12 21a9.004 9.004 0 0 1-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 0 1 7.843 4.582M12 3a8.997 8.997 0 0 0-7.843 4.582m15.686 0A11.953 11.953 0 0 1 12 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0 1 21 12c0 .778-.099 1.533-.284 2.253m0 0A17.919 17.919 0 0 1 12 16.5c-3.162 0-6.133-.815-8.716-2.247m0 0A9.015 9.015 0 0 1 3 12c0-1.605.42-3.113 1.157-4.418"
+                      />
+                    </svg>
+                  </a>
+                  <a
+                    (click)="$event.stopPropagation()"
+                    [href]="project.sourceCode"
+                    target="_blank"
+                    class="text-stone-500 hover:text-stone-600 dark:text-yellow-600 dark:hover:text-yellow-500 underline underline-offset-4 text-sm h-5 w-5 hover:scale-110 transition-transform"
+                    ><svg
+                      class="w-full h-full"
+                      aria-hidden="true"
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      fill="currentColor"
+                      viewBox="0 0 24 24"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M12.006 2a9.847 9.847 0 0 0-6.484 2.44 10.32 10.32 0 0 0-3.393 6.17 10.48 10.48 0 0 0 1.317 6.955 10.045 10.045 0 0 0 5.4 4.418c.504.095.683-.223.683-.494 0-.245-.01-1.052-.014-1.908-2.78.62-3.366-1.21-3.366-1.21a2.711 2.711 0 0 0-1.11-1.5c-.907-.637.07-.621.07-.621.317.044.62.163.885.346.266.183.487.426.647.71.135.253.318.476.538.655a2.079 2.079 0 0 0 2.37.196c.045-.52.27-1.006.635-1.37-2.219-.259-4.554-1.138-4.554-5.07a4.022 4.022 0 0 1 1.031-2.75 3.77 3.77 0 0 1 .096-2.713s.839-.275 2.749 1.05a9.26 9.26 0 0 1 5.004 0c1.906-1.325 2.74-1.05 2.74-1.05.37.858.406 1.828.101 2.713a4.017 4.017 0 0 1 1.029 2.75c0 3.939-2.339 4.805-4.564 5.058a2.471 2.471 0 0 1 .679 1.897c0 1.372-.012 2.477-.012 2.814 0 .272.18.592.687.492a10.05 10.05 0 0 0 5.388-4.421 10.473 10.473 0 0 0 1.313-6.948 10.32 10.32 0 0 0-3.39-6.165A9.847 9.847 0 0 0 12.007 2Z"
+                        clip-rule="evenodd"
+                      />
+                    </svg>
+                  </a>
+                </div>
+              </div>
             </div>
 
             <p
-              class="text-sm line-clamp-4 leading-relaxed"
+              class="text-sm line-clamp-4 leading-relaxed mt-6"
               [title]="project.description"
             >
               {{ project.description }}
             </p>
-            <p>
-              Tech:
+            <p class="text-xs flex flex-wrap gap-2 mt-auto">
               <ng-container *ngFor="let tech of project.technologies">
-                <span class="px-2 text-sm">{{ tech.label }}</span>
+                <!-- <span><img [src]="tech.imgUrl" alt="" class="h-4 w-4" /></span> -->
+                <span
+                  class="px-2 py-1 rounded-xl bg-yellow-600 text-stone-100 dark:text-stone-200"
+                  >{{ tech.label }}</span
+                >
               </ng-container>
             </p>
           </div>
