--- a/src/app/features/home/components/hero/hero.component.html
+++ b/src/app/features/home/components/hero/hero.component.html
@@ -32,7 +32,7 @@
         <a
           href="resume.pdf"
           download="reymarkbacalso_resume.pdf"
-          class="w-4/5 sm:w-auto text-center text-stone-100 bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded text-base line-clamp-1 flex items-center justify-center gap-2 cursor-pointer"
+          class="w-4/5 sm:w-auto text-center text-stone-100 bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded text-base line-clamp-1 flex items-center justify-center gap-2 cursor-pointer shadow-lg dark:shadow-none"
         >
           <span>
             <svg
