Added plugin for better scrollbar Updated layout component removed footer component and transfer it to respective pages
Added smooth scrolling when changing routes
Added more button for phone to tablet screens

--- a/src/app/core/layout/components/header/header.component.html
+++ b/src/app/core/layout/components/header/header.component.html
@@ -105,7 +105,7 @@
   <button
     class="px-2 transition-colors w-3/5 sm:w-fit flex justify-center"
     [ngClass]=""
-    (click)="toggleTheme()"
+    (click)="toggleTheme(); layoutService.expandMenu = false"
   >
     <!-- {{ layoutService.theme | titlecase }} -->
     <span [ngClass]="{ hidden: layoutService.theme == THEME.DARK }">
