--- a/src/app/features/home/components/about-me/about-me.component.html
+++ b/src/app/features/home/components/about-me/about-me.component.html
@@ -1,4 +1,5 @@
 <section
+  id="about"
   class="pt-8 text-stone-600 dark:text-stone-400 body-font transition-all flex flex-col items-center justify-start md:justify-center min-h-full mx-auto max-w-screen-md"
 >
   <div
