--- a/src/app/features/projects/projects.component.html
+++ b/src/app/features/projects/projects.component.html
@@ -1,4 +1,4 @@
-<div class="min-h-full mt-16 w-full">
+<div class="min-h-full mt-[8rem] md:mt-16 w-full">
   <div
     class="min-h-[calc(100vh-16rem)] w-full mx-auto max-w-screen-lg text-stone-600 dark:text-stone-300 px-4"
   >
@@ -90,4 +90,5 @@
       </ng-container>
     </div>
   </div>
+  <app-footer></app-footer>
 </div>
