--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-layout class="dark:bg-gray-900 scroll-smooth font-sans">
-  <router-outlet></router-outlet>
+<app-layout
+  [@routeAnimate]="prepareRoute(outlet)"
+  class="dark:bg-gray-900 scroll-smooth font-sans router-container"
+>
+  <router-outlet #outlet="outlet"></router-outlet>
 </app-layout>
