--- a/src/app/core/layout/components/footer/footer.component.html
+++ b/src/app/core/layout/components/footer/footer.component.html
@@ -3,7 +3,7 @@
     class="xl:container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col"
   >
     <p
-      class="text-sm text-stone-600 dark:text-stone-400 sm:ml-4 sm:pl-4 sm:py-2 sm:mt-0 mt-4 text-wrap text-center"
+      class="text-sm text-stone-600 dark:text-stone-400 sm:pl-4 sm:py-2 sm:mt-0 mt-4 text-wrap text-center"
     >
       © 2024 Reymark Bacalso —
       <a
