--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,16 +9,6 @@
   font-family:'Nunito Sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-::-webkit-scrollbar {
-  width: 0.25rem;
-}
-
-::-webkit-scrollbar-track {
-  border-radius: 10px;
-  @apply bg-transparent
-}
-
-::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  @apply bg-stone-400;
+html {
+  scroll-behavior: smooth;
 }
