--- a/src/app/features/home/components/hero/hero.component.html
+++ b/src/app/features/home/components/hero/hero.component.html
@@ -1,5 +1,5 @@
 <section
-  class="text-stone-600 dark:text-stone-400 body-font transition-all min-h-dvh md:min-h-[calc(100vh-16rem)] lg:min-h-full flex flex-col items-center justify-start md:justify-center mx-auto max-w-screen-md"
+  class="text-stone-600 dark:text-stone-400 body-font transition-all min-h-lvh md:min-h-[calc(100vh-16rem)] lg:min-h-full relative flex flex-col items-center justify-center md:justify-center mx-auto max-w-screen-md"
 >
   <div
     class="container mx-auto flex px-5 py-24 items-center justify-center flex-col sm:flex-row gap-4 sm:gap-8 md:gap-16"
@@ -56,7 +56,7 @@
           <span>Download CV</span>
         </a>
         <button
-          class="hidden w-full sm:w-auto text-center text-stone-700 bg-stone-100 py-2 px-6 focus:outline-none hover:bg-stone-200 rounded text-l flex items-center justify-center gap-4 border-[1px] border-stone-600 dark:border-stone-600"
+          class="hidden w-full sm:w-auto text-center text-stone-700 bg-stone-100 py-2 px-6 focus:outline-none hover:bg-stone-200 rounded text-l items-center justify-center gap-4 border-[1px] border-stone-600 dark:border-stone-600"
         >
           <span class="text-base">
             <svg
@@ -78,5 +78,30 @@
         </button>
       </div>
     </div>
+  </div>
+
+  <div class="flex md:hidden items-center justify-center absolute bottom-4">
+    <button
+      (click)="scrollDownClicked.emit('about')"
+      class="text-stone-500 dark:text-stone-300 bg-stone-100/60 hover:bg-stone-100 dark:bg-stone-100/20 dark:hover:bg-stone-100/10 shadow-md dark:shadow-none rounded-sm text-sm px-8 py-1 animate-bounce w-fit flex items-center justify-center gap-1 cursor-pointer"
+    >
+      <span class="tracking-widest">More</span>
+      <span class="h-4 w-4">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class=""
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="m4.5 5.25 7.5 7.5 7.5-7.5m-15 6 7.5 7.5 7.5-7.5"
+          />
+        </svg>
+      </span>
+    </button>
   </div>
 </section>
