--- a/src/app/core/layout/components/header/header.component.html
+++ b/src/app/core/layout/components/header/header.component.html
@@ -26,7 +26,7 @@
         >Projects</a
       >
     </nav>
-    <div class="hidden sm:inline-flex">
+    <div class="inline-flex ml-auto sm:ml-0">
       <ng-container *ngTemplateOutlet="themeToggle"></ng-container>
     </div>
 
@@ -40,7 +40,7 @@
         viewBox="0 0 24 24"
         stroke-width="1.5"
         stroke="currentColor"
-        class="size-6"
+        class="size-8"
       >
         <path
           stroke-linecap="round"
@@ -91,9 +91,9 @@
             </li>
           </ul>
         </nav>
-        <div class="w-full flex justify-center items-center p-4">
+        <!-- <div class="w-full flex justify-center items-center p-4">
           <ng-container *ngTemplateOutlet="themeToggle"></ng-container>
-        </div>
+        </div> -->
       </div>
 
       <div><app-footer></app-footer></div>
